--- a/package.json
+++ b/package.json
@@ -5,15 +5,11 @@
   "homepage": "https://amotile.github.io/stable-diffusion-workshop/",
   "dependencies": {
     "@chakra-ui/react": "^2.3.2",
-    "@emotion/react": "^11.10.4",
-    "@emotion/styled": "^11.10.4",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^29.0.0",
     "@types/node": "^18.7.14",
-    "@types/react": "^18.0.18",
-    "@types/react-dom": "^18.0.6",
     "@types/react-dropzone": "^5.1.0",
     "autoresize": "^0.1.1",
     "autosize": "^5.0.1",
@@ -28,7 +24,6 @@
     "react-icons": "^4.4.0",
     "react-json-tree": "^0.17.0",
     "react-scripts": "5.0.1",
-    "typescript": "^4.8.2",
     "web-vitals": "^2.1.4",
     "zustand": "^4.1.1"
   },
@@ -58,6 +53,10 @@
   },
   "devDependencies": {
     "@types/autosize": "^4.0.1",
-    "@types/ramda": "^0.28.15"
+    "@types/ramda": "^0.28.15",
+    "@types/react": "^18.0.21",
+    "@types/react-dom": "^18.0.6",
+    "@typescript-eslint/parser": "^5.38.1",
+    "typescript": "^4.8.3"
   }
 }
